# skewDetection

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  TODO-IDEAS.txt  WordSkewDetection.h  skewDetectionConfig.cmake.in
cmake/: SKDetGenAndroidMK.cmake
cmake/templates/: SKDet.mk.in  SKDet.mk.in~
doc/: .~lock.Skew_Detection.odp#  Skew_Detection.odp  Skew_DetectionC.odp
src/: .directory  BestGuessSKDetector.cpp  BestGuessSKDetector.h  CentersSkDet.cpp  CentersSkDet.h  DiscreteVotingWordSkDet.cpp  DiscreteVotingWordSkDet.h  HistDeviationSkDet.cpp  HistDeviationSkDet.h  HistogramWordSkDet.cpp  HistogramWordSkDet.h  IOUtils.cpp  IOUtils.h  ImageFilter.cpp  ImageFilter.h  LRLongestEdge.cpp  LRLongestEdge.h  LeftRightHullSkDet.cpp  LeftRightHullSkDet.h  LongestEdgeSkDetector.cpp  LongestEdgeSkDetector.h  ResultsWriter.cpp  ResultsWriter.h  SkeletonisationTest.cpp  SkeletonisationTest.h  SkewDetection.h  SkewDetector.cpp  SkewDetector.h  SkewEvaluator.cpp  SkewEvaluator.h  SpacingProfileDetector.cpp  SpacingProfileDetector.h  TemplateUtils.cpp  TemplateUtils.h  ThinProfileSkDet.cpp  ThinProfileSkDet.h  VerticalDomSkDet.cpp  VerticalDomSkDet.h  VotingWordSkDet.cpp  VotingWordSkDet.h  (+12 more)
templates/: alphabet_index.htm  index.htm  object_data.js  style.css
templates/detector/: detector.html  detector.js  json_data.js
templates/detector/css/: .gitignore  Sunburst.css
test/: TestDetectors.cpp  run_all_tests.cpp
testData/ahh/ComicSansMS-Regular-AAH/: ComicSansMS-Regular-AAH.txt
testData/badVoting/AngsanaNew-Regular-taco/: AngsanaNew-Regular-taco.txt
testData/badVoting/Gabriola-Regular-born/: Gabriola-Regular-born.txt
testData/words/2002/: 2002.txt
testData/words/2014-04-04-18-55-36/: 2014-04-04-18-55-36.txt
testData/words/TimesNewRoman-Italic-AUTISM/: TimesNewRoman-Italic-AUTISM.txt
testData/words/new/: new.txt
tools/: distributions.py  generate3letterwords.py  generateFontsEavaluationPage.py  ocrTrainGenerator.py  plotAlphabet.py  plotDensity.py  plotRotationInvarince.py  testPolar.py
